force-app/main/default/objects/Circular__c/Circular__c.object-meta.xml
<CustomObject>
    <label>Circular</label>
    <nameField>
        <displayFormat>CIR-{0000}</displayFormat>
        <label>Circular Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Circulars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>