force-app/main/default/objects/Circular__c/fields/Circular_Title__c.field-meta.xml
<CustomField>
    <fullName>Circular_Title__c</fullName>
    <label>Circular Title</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>