force-app/main/default/objects/Circular__c/fields/Departments__c.field-meta.xml
<CustomField>
    <fullName>Departments__c</fullName>
    <label>Departments</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MCA</fullName>
            </value>
            <value>
                <fullName>MBA</fullName>
            </value>
            <value>
                <fullName>CSE</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>ECE</fullName>
            </value>
            <value>
                <fullName>EEE</fullName>
            </value>
            <value>
                <fullName>MECH</fullName>
            </value>
            <value>
                <fullName>MSC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>