force-app/main/default/objects/Circular__c/fields/Target_Member__c.field-meta.xml
<CustomField>
    <fullName>Target_Member__c</fullName>
    <label>Target Member</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Staffs</fullName>
            </value>
            <value>
                <fullName>Students</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>