force-app/main/default/objects/Circular__c/validationRules/Date_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_validation</fullName>
    <active>true</active>
    <errorConditionFormula>Expiry_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Expiry_Date__c</errorDisplayField>
    <errorMessage>Expiry date cannot be in the past.</errorMessage>
</ValidationRule>