force-app/main/default/objects/Circular__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Target_Member__c</columns>
    <columns>Circular_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>