force-app/main/default/objects/Circular__c/listViews/Staff_Circulars.listView-meta.xml
<ListView>
    <fullName>Staff_Circulars</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Target_Member__c</field>
        <operation>equals</operation>
        <value>Staffs</value>
    </filters>
    <filters>
        <field>Target_Member__c</field>
        <operation>equals</operation>
        <value>Both</value>
    </filters>
    <label>Staff Circulars</label>
</ListView>