force-app/main/default/objects/Circular__c/listViews/Student_Circular.listView-meta.xml
<ListView>
    <fullName>Student_Circular</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Target_Member__c</field>
        <operation>equals</operation>
        <value>Students</value>
    </filters>
    <filters>
        <field>Target_Member__c</field>
        <operation>equals</operation>
        <value>Both</value>
    </filters>
    <label>Student Circular</label>
</ListView>